Resolved the stretching problem and centered the cards

--- a/src/index.css
+++ b/src/index.css
@@ -92,8 +92,8 @@ body{
   grid-template-columns: repeat(4, 1fr);
   background-color: rgb(0, 0, 0, 0.6);
   min-height: 100vh;
-  justify-content: center;
-  gap: 1rem
+  gap: 1rem;
+  margin: 0 auto;
 }
 
 .clothing-display img{
@@ -108,6 +108,9 @@ body{
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
+  max-height: 370px;
+  max-width: 300px;
+  justify-self: center;
 }
 
 .item h1{
@@ -205,7 +208,7 @@ span{
   }
 }
 
-@media (max-width: 596px){
+@media (max-width: 640px){
   .clothing-display{
     grid-template-columns: repeat(2, 1fr);
   }
